ranger: add an associations for Ebooks

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -149,6 +149,13 @@ ext cbr, has zathura,  X, flag f = zathura -- "$@"
 ext cbz, has zathura,  X, flag f = zathura -- "$@"
 
 #-------------------------------------------
+# Ebooks
+#-------------------------------------------
+ext epub, has fbreader, X, flag f = fbreader -- "$@"
+ext fb2,  has fbreader, X, flag f = fbreader -- "$@"
+ext mobi, has fbreader, X, flag f = fbreader -- "$@"
+
+#-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
 mime ^image, has eog,    X, flag f = eog -- "$@"
