--- a/.inputrc
+++ b/.inputrc
@@ -1,7 +1,7 @@
 "\e[A": history-search-backward
 "\e[B": history-search-forward
 #TAB: menu-complete
-#set show-all-if-ambiguous On
+set show-all-if-ambiguous On
 set glob-complete-word On
 set completion-ignore-case on
 set blink-matching-paren on
