ranger: add geeqie to rifle assocs

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -133,9 +133,10 @@ ext mobi, has fbreader, X, flag f = fbreader -- "$@"
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
+mime ^image, has geeqie, X, flag f = geeqie -- "$@"
 mime ^image, has eog,    X, flag f = eog -- "$@"
 mime ^image, has sxiv,   X, flag f = sxiv -- "$@"
-mime ^image, has feh,    X, flag f = feh -- "$@"
+mime ^image, has feh,    X, flag f = feh --start-at "$@" .
 mime ^image, has mirage, X, flag f = mirage -- "$@"
 mime ^image, has gimp,   X, flag f = gimp -- "$@"
 ext xcf,                 X, flag f = gimp -- "$@"
