ranger: fix rifle's association for comic books

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -117,10 +117,10 @@ ext djvu, has zathura, X, flag f = zathura -- "$@"
 #-------------------------------------------
 
 ext cbr, has mcomix,      X, flag f = mcomix     -- "$@"
-ext cbr, has qcomicbook,  X, flag f = qcomicbook -- "$@"
+ext cbr, has qcomicbook,  X, flag f = qcomicbook "$@"
 ext cbr, has zathura,     X, flag f = zathura    -- "$@"
 ext cbz, has mcomix,      X, flag f = mcomix     -- "$@"
-ext cbz, has qcomicbook,  X, flag f = qcomicbook -- "$@"
+ext cbz, has qcomicbook,  X, flag f = qcomicbook "$@"
 ext cbz, has zathura,     X, flag f = zathura    -- "$@"
 
 #-------------------------------------------
