--- a/.inputrc
+++ b/.inputrc
@@ -1,8 +1,5 @@
 "\e[A": history-search-backward
 "\e[B": history-search-forward
-#TAB: menu-complete
 set show-all-if-ambiguous On
-set glob-complete-word On
-set completion-ignore-case on
-set blink-matching-paren on
-"\C-w": backward-kill-word
+set completion-ignore-case On
+set blink-matching-paren On
