inputrc: reconfigure, add keys

--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,12 @@
 "\e[A": history-search-backward
 "\e[B": history-search-forward
+"\C-p": history-search-backward
+"\C-n": history-search-forward
 set show-all-if-ambiguous On
+set show-all-if-unmodified On
 set completion-ignore-case On
+set completion-prefix-display-length 3
 set blink-matching-paren On
+set visible-stats On
+set colored-stats On
+
