mpd: clean up a config, move ncmpcpp config to XDG

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,30 +1,36 @@
-music_directory		"~/Music"
-playlist_directory	"~/.mpd/playlists"
-db_file	            "~/.mpd/database"
-log_file			"~/.mpd/log"
-pid_file			"~/.mpd/pid"
-state_file			"~/.mpd/state"
-sticker_file		"~/.mpd/sticker.sql"
+music_directory    "~/Music"
+playlist_directory "~/.mpd/playlists"
+db_file            "~/.mpd/tag_cache"
+log_file           "~/.mpd/log"
+pid_file           "~/.mpd/pid"
+state_file         "~/.mpd/state"
+sticker_file       "~/.mpd/sticker.sql"
 
-gapless_mp3_playback    "no"
+bind_to_address     "127.0.0.1"
+#port                "6600"
+restore_paused      "yes"
+#default_permissions "read,control"
+
+gapless_mp3_playback "no"
+
+replaygain			      "album"
+replaygain_missing_preamp "-3"
 
 input {
-        plugin "curl"
-#       proxy "proxy.isp.com:8080"
-#       proxy_user "user"
-#       proxy_password "password"
+  plugin "curl"
 }
 
 audio_output {
-	type		"alsa"
-	name		"My ALSA Device"
-##	device		"hw:0,0"	# optional
-	mixer_type      "software"	# optional
-##	mixer_device	"default"	# optional
-##	mixer_control	"PCM"		# optional
-##	mixer_index	"0"		# optional
+  type   "fifo"
+  name   "FIFO"
+  path   "/tmp/mpd.fifo"
+  format "44100:16:2"
 }
 
-replaygain			"album"
-filesystem_charset		"UTF-8"
-id3v1_encoding			"UTF-8"
+audio_output {
+  type       "pulse"
+#  type       "alsa"
+  name       "MPD"
+  mixer_type "software"
+}
+
