git: reword my own name

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    name = Aleksey Pirogov
+    name = Aleksei Pirogov
     email = astynax@users.noreply.github.com
 [alias]
     st = status
