stack: fix the name

--- a/.stack/config.yaml
+++ b/.stack/config.yaml
@@ -5,6 +5,6 @@
 templates:
   params:
     author-email: astynax84@gmail.com
-    author-name: Aleksey Pirogov
-    copyright: Aleksey Pirogov aka astynax
+    author-name: Aleksei Pirogov
+    copyright: Aleksei Pirogov aka astynax
     github-username: astynax
