--- a/.config/youtube-dl/config
+++ b/.config/youtube-dl/config
@@ -1,1 +1,2 @@
 -o '~/Downloads/youtube/%(uploader)s - %(title)s.%(ext)s'
+-f 'bestvideo[height=720]+bestaudio/bestvideo[height=1080]+bestaudio/best[height<=1080]'
