[ranger] tweak some options

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,4 +1,7 @@
 set vcs_backend_hg local
+set use_preview_script false
+set dirname_in_tabs true
+set confirm_on_delete always
 set colorscheme my
 set collapse_preview false
 set mouse_enabled false
