ranger: enable scope, add scope for Ebooks

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,5 +1,5 @@
 set vcs_backend_hg local
-set use_preview_script false
+set use_preview_script true
 set dirname_in_tabs true
 set confirm_on_delete always
 set colorscheme my
