--- a/.gitconfig
+++ b/.gitconfig
@@ -29,6 +29,7 @@
     whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
     autocrlf = input
     safecrlf = true
+	excludesfile = ~/.gitignore
 
 [pull]
 	rebase = true
