--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -1,6 +1,7 @@
 ncmpcpp_directory = ~/.config/ncmpcpp
 mpd_music_dir = ~/Music
 mpd_crossfade_time = 5
+enable_window_title = no
 
 visualizer_fifo_path = /tmp/mpd.fifo
 visualizer_output_name = mpd_fifo
