--- a/.config/i3/config
+++ b/.config/i3/config
@@ -200,9 +200,7 @@ bar {
     mode hide
     hidden_state hide
 
-    tray_output HDMI-1
-    tray_output eDP-1
-    tray_output DP-1
+    tray_output primary
     status_command i3status -c "$cfg_dir/status"
     colors {
         # solarized
