[mpv] clean the config up

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -11,9 +11,7 @@ volume-max=300
 
 use-filedir-conf=yes
 
-# custom VO
-#hwdec=vaapi-copy
 hwdec=auto
 vo=gpu,x11
 
-no-audio-display
+audio-display=no
