--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -118,9 +118,11 @@ ext djvu, has zathura, X, flag f = zathura -- "$@"
 
 ext cbr, has mcomix,      X, flag f = mcomix     -- "$@"
 ext cbr, has qcomicbook,  X, flag f = qcomicbook "$@"
+ext cbr, has evince,      X, flag f = evince     -- "$@"
 ext cbr, has zathura,     X, flag f = zathura    -- "$@"
 ext cbz, has mcomix,      X, flag f = mcomix     -- "$@"
 ext cbz, has qcomicbook,  X, flag f = qcomicbook "$@"
+ext cbz, has evince,      X, flag f = evince     -- "$@"
 ext cbz, has zathura,     X, flag f = zathura    -- "$@"
 
 #-------------------------------------------
