--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -3,7 +3,7 @@ mpd_music_dir = ~/Music
 mpd_crossfade_time = 5
 enable_window_title = no
 
-visualizer_data_source = /tmp/mpd.fifo
+visualizer_fifo_path = /tmp/mpd.fifo
 visualizer_output_name = mpd_fifo
 visualizer_in_stereo = yes
 visualizer_type = wave
