[ranger] add a rifle rule for the Atril

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -101,6 +101,7 @@ mime ^video, terminal, !X, has mpv       = mpv -- "$@"
 #-------------------------------------------
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has evince,   X, flag f = evince -- "$@"
+ext pdf, has atril,    X, flag f = atril -- "$@"
 
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
