--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -9,7 +9,9 @@ format = """\
     $python\
     $rust\
     $elm\
+    $kotlin\
     $nix_shell\
+    $custom\
     $cmd_duration\
     $battery\
     $line_break\
@@ -53,11 +55,11 @@ renamed = "%"
 deleted = "-"
 
 [package]
-symbol = "^"
+symbol = "#"
 
 [python]
 symbol = "Py "
-pyenv_version_name = true
+detect_extensions = []
 
 [elm]
 symbol = "Elm "
@@ -65,5 +67,23 @@ symbol = "Elm "
 [rust]
 symbol = "Rust "
 
+[kotlin]
+symbol = "Kt "
+
 [nix_shell]
 symbol = "Nix "
+
+[custom.commonlisp]
+extensions = ["asd"]
+symbol = "CL "
+style = "inverted cyan"
+
+[custom.makefile]
+files = ["Makefile"]
+description = "Makefile is present"
+symbol = "Make "
+
+[custom.okfile]
+files = [".ok"]
+description = "Ok-file is present"
+symbol = "Ok "
