--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -2,6 +2,7 @@ format = """\
     $username\
     $hostname\
     $directory\
+    $env_var\
     $git_branch\
     $git_state\
     $git_status\
@@ -20,6 +21,10 @@ format = """\
     """
 
 add_newline = false
+
+[env_var.DEBIAN_CHROOT]
+format = "([\\[$env_value\\]](bold red) )"
+default = ""
 
 [battery]
 format = "[BATTERY:$percentage]($style)"
