[git][nix] add the difftastic tool and integrate with git

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,13 +4,11 @@
 [alias]
     st = status
     com = commit
-    ls = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)[%an]%Creset' --abbrev-commit --date=relative
     ll = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)[%an]%Creset' --decorate --numstat
-    ld = log --pretty=format:'%C(red)%h %Cgreen%ad%C(yellow)%d %Creset%s%C(bold blue) [%cn]%Creset' --decorate --date=short
+    l = log --pretty=format:'%C(red)%h %Cgreen%ad%C(yellow)%d %Creset%s%C(bold blue) [%cn]%Creset' --decorate --date=short
     up = !git fetch upstream && git rebase upstream/master
     w = whatchanged --decorate -p
-    diverges = !bash -c 'diff --old-line-format='' --new-line-format='' <(git rev-list --first-parent "${1:-master}") <(git rev-list --first-parent "${2:-HEAD}") | head -1' -
-    ar = !bash -c 'git rebase --autosquash -i `git diverges ${1:-master}`'
+    dt = !env GIT_EXTERNAL_DIFF=difft git diff
 [push]
     default = simple
 [merge]
