[ranger] register the atril as a DjVU reader

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -110,6 +110,7 @@ ext od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, flag f 
 ext od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has soffice,     X, flag f = soffice "$@"
 ext od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has ooffice,     X, flag f = ooffice "$@"
 
+ext djvu, has atril,   X, flag f = atril -- "$@"
 ext djvu, has evince,  X, flag f = evince -- "$@"
 ext djvu, has zathura, X, flag f = zathura -- "$@"
 
