[ranger] simplify the title bar

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -5,4 +5,7 @@ set confirm_on_delete always
 set colorscheme my
 set collapse_preview false
 set mouse_enabled false
+set update_title true
+set hostname_in_titlebar false
+set tilde_in_titlebar true
 map <delete> console delete
