--- a/.config/systemd/user/basher@.service
+++ b/.config/systemd/user/basher@.service
@@ -1,11 +1,9 @@
 [Unit]
 Description=Run and fork using bash
+Wants=graphical-session.target
 
 [Service]
 EnvironmentFile=%T/%i.env
 ExecStart=/usr/bin/bash /home/astynax/.local/bin/basher.bash
 Restart=no
 Type=forking
-
-[Install]
-WantedBy=graphical-session.target
